--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AshPark Login Page</title>
+    <title>AshPark Registration Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -28,22 +28,9 @@
                         <!-- Logo -->
 
                         <div class="text-center mb-5">
-                            <h3 class="fw-bold">Log In</h3>
-                            <p class="text-secondary">Get access to your account</p>
+                            <h3 class="fw-bold">Register Now</h3>
+                            <p class="text-secondary">Create your account</p>
                         </div>
-
-                        <!-- Social Login -->
-                        <button class="btn btn-lg btn-outline-secondary btn-outline-custom w-100 mb-3">
-                            <i class='bx bxl-microsoft text-primary me-1 fs-6' ></i> Login with Microsoft
-                        </button>
-                        <!-- Social Login -->
-
-                        <!-- Divider -->
-                        <div class="position-relative">
-                            <hr class="text-secondary divider">
-                            <div class="divider-content-center">Or</div>
-                        </div>
-                        <!-- Divider -->
 
                         <!-- Form -->
                         <form action="#">
@@ -51,29 +38,38 @@
                                 <span class="input-group-text">
                                     <i class='bx bx-user'></i>
                                 </span>
-                                <input type="text" class="form-control form-control-lg fs-6" placeholder="Username">
+                                <input type="text" class="form-control form-control-lg fs-6" placeholder="Name">
                             </div>
                             <div class="input-group mb-3">
                                 <span class="input-group-text">
-                                    <i class='bx bx-lock-alt'></i>
+                                    <i class='bx bx-id-card'></i>
                                 </span>
-                                <input type="password" class="form-control form-control-lg fs-6" placeholder="Password">
+                                <input type="text" class="form-control form-control-lg fs-6" placeholder="ID">
                             </div>
-                            <div class="input-group mb-3 d-flex justify-content-between">
-                                <div class="form-check">
-                                    <input type="checkbox" class="form-check-input" id="formCheck">
-                                    <label for="formCheck" class="form-check-label text-secondary"><small>Remember Me</small></label>
-                                </div>
-                                <div>
-                                    <small><a href="#">Forgot Password?</a></small>
-                                </div>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text">
+                                    <i class='bx bx-envelope'></i>
+                                </span>
+                                <input type="email" class="form-control form-control-lg fs-6" placeholder="Email">
                             </div>
-                            <button class="btn btn-primary btn-lg w-100">Login</button>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text">
+                                    <i class='bx bx-phone'></i>
+                                </span>
+                                <input type="tel" class="form-control form-control-lg fs-6" placeholder="Phone Number">
+                            </div>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text">
+                                    <i class='bx bx-car'></i>
+                                </span>
+                                <input type="text" class="form-control form-control-lg fs-6" placeholder="Subscription Plan ID">
+                            </div>
+                            <button class="btn btn-primary btn-lg w-100">Sign Up</button>
                         </form>
                         <!-- Form -->
 
-                        <div class="text-center">
-                            <small>Don't have an account? <a href="register.html" class="fw-bold">Sign Up</a></small>
+                        <div class="text-center mt-4">
+                            <small>Already have an account? <a href="login.html" class="fw-bold">Log In</a></small>
                         </div>
                     </div>
                 </div>
