--- a/register.html
+++ b/register.html
@@ -64,6 +64,18 @@
                                 </span>
                                 <input type="text" class="form-control form-control-lg fs-6" placeholder="Subscription Plan ID">
                             </div>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text">
+                                    <i class='bx bx-lock-alt'></i>
+                                </span>
+                                <input type="password" class="form-control form-control-lg fs-6" placeholder="Password">
+                            </div>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text">
+                                    <i class='bx bx-lock-alt'></i>
+                                </span>
+                                <input type="password" class="form-control form-control-lg fs-6" placeholder="Retype Password">
+                            </div>
                             <button class="btn btn-primary btn-lg w-100">Sign Up</button>
                         </form>
                         <!-- Form -->
