--- a/user.html
+++ b/user.html
@@ -13,6 +13,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/styles/dashboard.css">
+    <link rel="stylesheet" href="assets/styles/user.css">
     
 </head>
 <body>
@@ -46,7 +47,7 @@
 
             <ul class="sidebar-list">
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="dashboard-admin.html">
                         <span class="material-icons-outlined">dashboard</span> Dashboard
                     </a>
                 </li>
@@ -56,12 +57,12 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="slots.html">
                         <span class="material-icons-outlined">local_parking</span> Slots
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="user.html">
                         <span class="material-icons-outlined">person</span> Users
                     </a>
                 </li>
@@ -76,7 +77,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="login.html">
                         <span class="material-icons-outlined">logout</span> Logout
                     </a>
                 </li>
