--- a/dashboard-admin.html
+++ b/dashboard-admin.html
@@ -45,7 +45,7 @@
 
             <ul class="sidebar-list">
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="dashboard-admin.html">
                         <span class="material-icons-outlined">dashboard</span> Dashboard
                     </a>
                 </li>
@@ -55,12 +55,12 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="slots.html">
                         <span class="material-icons-outlined">local_parking</span> Slots
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="user.html">
                         <span class="material-icons-outlined">person</span> Users
                     </a>
                 </li>
@@ -75,7 +75,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="login.html">
                         <span class="material-icons-outlined">logout</span> Logout
                     </a>
                 </li>
