--- a/slots.html
+++ b/slots.html
@@ -50,7 +50,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="analytics.html">
                         <span class="material-icons-outlined">analytics</span> Analytics
                     </a>
                 </li>
